--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
+/log/*
 /tmp
 
 # Configurations
@@ -26,5 +26,6 @@
 /public/uploads/
 
 # Solr
-solr/data/
-solr/development/data/
+solr/data/*
+solr/pids/*
+solr/development/data/*
