[#77486942] Modifield path uplods in env production

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ solr/pids/*
 solr/development/data/*
 solr/test/*
 sunspot-solr.pid
+
+# Ignore application configuration
+#/config/application.yml
