--- a/config/application.yml
+++ b/config/application.yml
@@ -1,12 +1,13 @@
 
 production:
   PATH_UPLOADS: "/home/production/railsapp/storage/"
-  #ASSETS_HOST: "http://cdn1.novacurriculos.com.br"
+  ASSETS_HOST: "http://assets.novacurriculos.com.br"
+  UPLOAD_HOST: "http://cdn1.novacurriculos.com.br"
 
-development:
-  #PATH_UPLOADS: "/home/picolo/ruby/nova_curriculos/public/"
-  #ASSETS_HOST: "http://localhost:3000"
-
-test:
-  #PATH_UPLOADS: "/home/picolo/ruby/nova_curriculos/public/"
-  #ASSETS_HOST: "http://localhost:3000"
+# development:
+#   #PATH_UPLOADS: "/home/picolo/ruby/nova_curriculos/public/"
+#   ASSETS_HOST: "http://localhost:3000"
+#
+# test:
+#   #PATH_UPLOADS: "/home/picolo/ruby/nova_curriculos/public/"
+#   ASSETS_HOST: "http://localhost:3000"
