--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -3,8 +3,8 @@
 #   sidekiq -C config.yml
 ---
 :verbose: false
-:logfile: log/sidekiq.log
-:pidfile: /home/production/railsapp/tmp/pids/sidekiq.pid
+:logfile: /home/production/railsapp/shared/log/sidekiq.log
+:pidfile: /home/production/railsapp/shared/pids/sidekiq.pid
 :concurrency: 25
 # Set timeout to 8 on Heroku, longer if you manage your own systems.
 :timeout: 30
