--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -16,5 +16,14 @@ test: &test
   password: root
   socket: /var/run/mysqld/mysqld.sock
 
+staging:
+  adapter: mysql2
+  encoding: utf8
+  database: nc_staging
+  pool: 5
+  username: root
+  password: root
+  socket: /var/run/mysqld/mysqld.sock
+
 production:
   <<: *dev
