--- a/config/pagseguro.yml
+++ b/config/pagseguro.yml
@@ -7,7 +7,10 @@ development: &development
 test:
   <<: *development
 
-production:
+production: &production
   authenticity_token: F0F299EF843240ABB14A9A484FEE7972
   email: luizpicolo@ibest.com.br
   return_to: "http://app.novacurriculos.com.br/pedido/efetuado"
+
+staging:
+   <<: *production
