[skip ci] added .idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Ruby mine
+.idea/*
+
 # Ignore the default SQLite database.
 /db/*.sqlite3P
 /db/*.sqlite3-journal
