[skip ci] add order

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
-# Ruby mine
-.idea/*
+# RubyMine project files
+.idea
+.idea/workspace.xml
 
 # Ignore the default SQLite database.
 /db/*.sqlite3P
