--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,9 +1,9 @@
-production: &production
+production:
   solr:
-    hostname: 127.0.0.1
-    port: 8080
+    hostname: localhost
+    port: 8983
     log_level: WARNING
-    path: /solr
+    path: /solr/production
     # read_timeout: 2
     # open_timeout: 0.5
 
@@ -17,9 +17,7 @@ development:
 test:
   solr:
     hostname: localhost
-    port: 8983
+    port: 8981
     log_level: WARNING
     path: /solr/test
-
-staging:
-   <<: *production
+    
